Version 100, ??, 1998
Changed class syntax, splitting public clause use into:
  `public' : defines ivars not in superclass
  `override' : defines ivars already in superclass
Removed letrec*; letrec has the same semantics
Removed constant-name and constant-name-all-globals
Removed secure-primitive-exception-types
MzLib cleanup:
 Removed all c.ss libraries, plus constan[t].ss
 Removed catch-errors and let-enumerate from macro.ss
 Removed make-class and make-class* from compat.ss
 Removed zsin, zcos, ztan, zasin, zacos, zatan, zlog, zexp,
  and zsqrt from zmath.ss (MzScheme's built-ins do complex)
 Moved from functio.ss to thread.ss: dynamic-disable-break,
  dynamic-wind/protect-break, make-single-threader
 Moved MzLib's compat.ss out of the core

Version 53, July 25, 1998
Changed file-modify-seconds to file-or-directory-modify-seconds
Changed rename-file to rename-file-or-directory
Changed file procedures to return void on success and raise
 and exception on failure: delete-file, rename-file-or-directory,
 file-size, copy-file, make-directory, delete-directory
Changed the procedures file-or-directory-modify-seconds and 
 file-or-directory-permissions to raise an exception if the
 file/directory does not exist
Changed current-drive to raise exn:misc:unsupported on platforms
 other than Windows
Added find-system-path
Fixed expand-defmacro for initialization argument expressions
 in a class*/names form
Fixed call/ec bug related to dynamic-wind (see !!! in 
 tests/basic.ss)
Fixed dynamic-wind bug: multiple levels of pre-thunks for a
 jump into a continuation were evaluated in reverse order
Fixed atan: second argument is allowed to be an exact non-integer
Fixed equal?: comparisons on equivalent vectors or structs
 with cycles no longer crash (until MzScheme runs out of memory)
Added make-temporary-file to MzLib's file.ss
Changed random and random-seed to use a parameter-specified
 random number generator; the generator is initially