@@ -78,7 +78,7 @@
 		 (lambda (expr)
 		   (cond
 		     [(or (number? expr)
-			  (symbol? expr) (type-symbol? expr) 
+			  (symbol? expr)
 			  (boolean? expr)
 			  (char? expr) (void? expr) (regexp? expr) 
 			  (null? expr)
@@ -204,7 +204,6 @@
 				   (not (eq? expr 'quasiquote))
 				   (not (eq? expr 'quote))
 				   (not (eq? expr 'unquote)))
-			      (type-symbol? expr)
 			      (char? expr)
 			      (string? expr)
 			      (not expr)
