@@ -5,4 +5,4 @@
 # define SPECIAL_TAG ""
 #endif
 
-#define VERSION "100/2" SPECIAL_TAG
+#define VERSION "100/3" SPECIAL_TAG
