@@ -5,6 +5,7 @@ Changed class syntax, splitting public clause use into:
 Removed letrec*; letrec has the same semantics
 Removed constant-name and constant-name-all-globals
 Removed secure-primitive-exception-types
+Removed readable type symbols (e.g., #<procedure>)
 MzLib cleanup:
  Removed all c.ss libraries, plus constan[t].ss
  Removed catch-errors and let-enumerate from macro.ss
